[package]
name = "elephant-net"
version = "0.1.0"
edition = "2024"
authors = ["Anthony Pekhov <pehovanton21@gmail.com>"]
description = "Elephant Net - HTTP client extension for PHP"
license = "MIT"

[lib]
crate-type = ["cdylib"]  # For extension .so
name = "elephant_net"

[dependencies]
ext-php-rs = "0.14.2"
ureq = { version = "2.10", default-features = false, features = ["json", "charset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.7"
urlencoding = "2.1.3"

[features]
default = []

[build-dependencies]
cc = "1.0"